Closed
Bug 389796
Opened 18 years ago
Closed 18 years ago
ASSERTION: I don't know what scope to use!, involving HTTP auth dialogs
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: dbaron, Assigned: mrbkap)
References
Details
Attachments
(2 files, 1 obsolete file)
|
60.28 KB,
text/plain; charset=UTF-8
|
Details | |
|
1.64 KB,
patch
|
jst
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
I'm seeing
###!!! ASSERTION: I don't know what scope to use!: 'Error', file /builds/trunk/mozilla/dom/src/base/nsDOMClassInfo.cpp, line 5989
probably related to HTTP auth dialogs that come up when restoring my Firefox session. (I have a saved session that includes 4 pages that bring up HTTP auth dialogs, and they all pop up when I restore.) Note that I got 5 assertions.
| Reporter | ||
Comment 1•18 years ago
|
||
| Assignee | ||
Comment 2•18 years ago
|
||
I must have been getting lazy... The assertion is harmless, I believe in the cases that we should have been hitting it. With this patch I was able to go to a site requiring HTTP authentication, and did not get any assertions.
Assignee: nobody → mrbkap
Status: NEW → ASSIGNED
Attachment #274125 -
Flags: superreview?(jst)
Attachment #274125 -
Flags: review?(jst)
Comment 3•18 years ago
|
||
I don't get any assertions (without the patch) on OS X or Linux. I suspect whatever dbaron was seeing may have been unique to startup or session restore?
Comment 4•18 years ago
|
||
Comment on attachment 274125 [details] [diff] [review]
Proposed fix
+ } else if (!(innerWin = oldWin->GetCurrentInnerWindowInternal())) {
+ scope = innerWin->GetGlobalJSObject();
This is in the code you're moving too (and I didn't see this the first time I reviewed it), but this aint right, if we ever get in here innerWin will be null.
r-
Attachment #274125 -
Flags: superreview?(jst)
Attachment #274125 -
Flags: superreview-
Attachment #274125 -
Flags: review?(jst)
Attachment #274125 -
Flags: review-
| Assignee | ||
Comment 5•18 years ago
|
||
Attachment #274125 -
Attachment is obsolete: true
Attachment #274207 -
Flags: superreview?(jst)
Attachment #274207 -
Flags: review?(jst)
Comment 6•18 years ago
|
||
Comment on attachment 274207 [details] [diff] [review]
Oops, sorry
r+sr=jst
Attachment #274207 -
Flags: superreview?(jst)
Attachment #274207 -
Flags: superreview+
Attachment #274207 -
Flags: review?(jst)
Attachment #274207 -
Flags: review+
| Assignee | ||
Comment 7•18 years ago
|
||
Fix checked into trunk.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Updated•7 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•